--- a/src/pages/account/ui/account-docs/account-doc/styles.module.scss
+++ b/src/pages/account/ui/account-docs/account-doc/styles.module.scss
@@ -40,6 +40,10 @@
     padding: 8px 12px;
     font: var(--heading5);
 
+    @media only screen and (max-width: 768px) {
+      font: var(--heading6);
+    }
+
     & > span {
       width: 18px;
       height: 18px;
