--- a/src/pages/account/ui/account-loans/account-loans-info/styles.module.scss
+++ b/src/pages/account/ui/account-loans/account-loans-info/styles.module.scss
@@ -11,7 +11,8 @@
 
     @media only screen and (max-width: 768px) {
       flex-direction: row;
-      align-items: baseline;
+      margin-bottom: 24px;
+      align-items: center;
     }
 
     & > h2 {
@@ -58,8 +59,7 @@
       }
 
       @media only screen and (max-width: 768px) {
-        flex-direction: column;
-        align-items: stretch;
+        display: none;
       }
 
       & > button {
@@ -68,12 +68,32 @@
         flex-shrink: 0;
       }
     }
+
+    &_btns_mobile {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      margin-top: 24px;
+
+      @media only screen and (min-width: 768px) {
+        display: none;
+      }
+
+      & > button {
+        padding: 12px 20px;
+        font: var(--heading5);
+      }
+    }
   }
 
   &_table {
     margin-bottom: 24px;
     width: 100%;
     border-collapse: collapse;
+
+    @media only screen and (max-width: 768px) {
+      margin-bottom: 0px;
+    }
 
     &_wrap {
       overflow-x: auto;
@@ -90,12 +110,16 @@
     & > thead {
       color: var(--text-grey);
       background-color: var(--bg-grl);
+
+      & > tr > th {
+        white-space: nowrap;
+      }
     }
 
     & th,
     & td {
       text-align: left;
-      padding: 12px;
+      padding: 12px 16px;
       font: var(--font-sm);
 
       @media only screen and (max-width: 768px) {
@@ -105,6 +129,12 @@
 
     & > tbody > tr {
       border-bottom: 1px solid var(--border-grey);
+    }
+
+    & > tbody > tr:last-child {
+      @media only screen and (max-width: 768px) {
+        border-bottom: none;
+      }
     }
 
     & > tbody > tr:last-child > td {
