--- a/src/pages/account/ui/account-personal/account-personal-card/styles.module.scss
+++ b/src/pages/account/ui/account-personal/account-personal-card/styles.module.scss
@@ -12,7 +12,8 @@
 
     @media only screen and (max-width: 768px) {
       flex-direction: row;
-      align-items: baseline;
+      margin-bottom: 24px;
+      align-items: center;
     }
 
     & > h2 {
