--- a/src/pages/account/ui/account-personal/account-personal-passport/styles.module.scss
+++ b/src/pages/account/ui/account-personal/account-personal-passport/styles.module.scss
@@ -12,7 +12,8 @@
 
     @media only screen and (max-width: 768px) {
       flex-direction: row;
-      align-items: baseline;
+      margin-bottom: 24px;
+      align-items: center;
     }
 
     & > h2 {
@@ -44,6 +45,9 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      row-gap: 24px;
+      column-gap: 36px;
+      flex-wrap: wrap;
 
       & > dl {
         display: flex;
