--- a/src/pages/account/ui/account-personal/account-personal-pts/styles.module.scss
+++ b/src/pages/account/ui/account-personal/account-personal-pts/styles.module.scss
@@ -12,7 +12,8 @@
 
     @media only screen and (max-width: 768px) {
       flex-direction: row;
-      align-items: baseline;
+      margin-bottom: 24px;
+      align-items: center;
     }
 
     & > h2 {
@@ -39,6 +40,7 @@
     &_item {
       display: grid;
       grid-template-columns: 1fr 1fr;
+      gap: 36px;
 
       & > dl {
         display: flex;
