--- a/src/pages/account/ui/account-profile/account-profile-mail/styles.module.scss
+++ b/src/pages/account/ui/account-profile/account-profile-mail/styles.module.scss
@@ -15,7 +15,8 @@
 
     @media only screen and (max-width: 768px) {
       flex-direction: row;
-      align-items: baseline;
+      margin-bottom: 24px;
+      align-items: center;
     }
 
     & > h2 {
@@ -47,6 +48,10 @@
     & button[type="submit"] {
       padding: 12px 20px;
       font: var(--heading5);
+
+      @media only screen and (max-width: 768px) {
+        width: 100%;
+      }
     }
   }
 }
