--- a/src/pages/account/ui/account-profile/account-profile-phone/styles.module.scss
+++ b/src/pages/account/ui/account-profile/account-profile-phone/styles.module.scss
@@ -15,7 +15,8 @@
 
     @media only screen and (max-width: 768px) {
       flex-direction: row;
-      align-items: baseline;
+      margin-bottom: 24px;
+      align-items: center;
     }
 
     & > h2 {
