--- a/src/pages/applying/ui/applying-auto/styles.module.scss
+++ b/src/pages/applying/ui/applying-auto/styles.module.scss
@@ -8,6 +8,9 @@
     @media only screen and (max-width: 768px) {
       border: none;
       margin: 0 auto 24px;
+      height: calc(100vh - 80px);
+      display: flex;
+      flex-direction: column;
     }
   }
 
