--- a/src/pages/applying/ui/applying-docs/styles.module.scss
+++ b/src/pages/applying/ui/applying-docs/styles.module.scss
@@ -8,6 +8,9 @@
     @media only screen and (max-width: 768px) {
       border: none;
       margin: 0 auto 24px;
+      height: calc(100vh - 80px);
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -41,6 +44,7 @@
 
     @media only screen and (max-width: 768px) {
       padding: 0;
+      margin: auto 0 28px;
     }
 
     & > a {
