--- a/src/pages/applying/ui/applying-result/styles.module.scss
+++ b/src/pages/applying/ui/applying-result/styles.module.scss
@@ -10,6 +10,7 @@
   @media only screen and (max-width: 768px) {
     padding: 40px 0;
     max-width: 100%;
+    height: calc(100vh - 80px);
   }
 
   &_icon {
@@ -53,6 +54,7 @@
     @media only screen and (max-width: 768px) {
       width: 100%;
       text-align: center;
+      margin-top: auto;
     }
   }
 }
