--- a/src/pages/applying/ui/applying-sum/styles.module.scss
+++ b/src/pages/applying/ui/applying-sum/styles.module.scss
@@ -8,6 +8,9 @@
     @media only screen and (max-width: 768px) {
       border: none;
       margin: 0 auto;
+      height: calc(100vh - 80px);
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -156,7 +159,8 @@
 
     @media only screen and (max-width: 768px) {
       justify-content: center;
-      padding: 36px 0;
+      margin: auto 0 28px;
+      padding: 0;
     }
 
     & > a {
