--- a/src/pages/registration/ui/reg-form/styles.module.scss
+++ b/src/pages/registration/ui/reg-form/styles.module.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     align-items: center;
     margin: 48px auto 0;
+
+    @media only screen and (max-width: 768px) {
+      height: calc(100vh - 128px);
+    }
   }
 
   &_icon {
@@ -12,6 +16,7 @@
     height: 48px;
     border-radius: 50%;
     margin-bottom: 24px;
+    flex-shrink: 0;
     background-color: var(--bg-bluish);
     background-position: center;
     background-repeat: no-repeat;
@@ -46,6 +51,7 @@
 
     @media only screen and (max-width: 768px) {
       max-width: 100%;
+      height: 100%;
     }
 
     & label {
@@ -56,6 +62,10 @@
     & button {
       padding: 12px 20px;
       font: var(--heading5);
+
+      @media only screen and (max-width: 768px) {
+        margin-bottom: 24px;
+      }
     }
   }
 
@@ -63,6 +73,11 @@
     display: flex;
     margin-bottom: 48px;
     align-items: baseline;
+
+    @media only screen and (max-width: 768px) {
+      margin-top: auto;
+      margin-bottom: 24px;
+    }
 
     & input[type="checkbox"] {
       margin-right: 8px;
