--- a/src/pages/account/ui/account-profile/account-profile-item/styles.module.scss
+++ b/src/pages/account/ui/account-profile/account-profile-item/styles.module.scss
@@ -16,6 +16,8 @@
 
     @media only screen and (max-width: 768px) {
       align-items: flex-start;
+      flex-wrap: wrap;
+      gap: 20px;
     }
   }
 
