--- a/src/widgets/conditions/ui/styles.module.scss
+++ b/src/widgets/conditions/ui/styles.module.scss
@@ -25,7 +25,8 @@
     margin-bottom: 24px;
     gap: 2px;
     display: grid;
-    grid-template-columns: repeat(4, min-content);
+    grid-template-columns: repeat(3, min-content);
+    max-width: 420px;
 
     @media only screen and (max-width: 768px) {
       transform: translateX(28px);
