Aligned the conditions title on the main page

--- a/src/widgets/conditions/ui/styles.module.scss
+++ b/src/widgets/conditions/ui/styles.module.scss
@@ -49,7 +49,12 @@
 
     &_box {
       display: grid;
-      grid-template-columns: auto 56px;
+      grid-template-columns: auto;
+      place-content: center;
+
+      @media only screen and (max-width: 768px) {
+        grid-template-columns: auto 56px;
+      }
     }
 
     & > button {
