--- a/src/widgets/footer/ui/styles.module.scss
+++ b/src/widgets/footer/ui/styles.module.scss
@@ -17,7 +17,7 @@
       gap: 20px;
     }
 
-    & > a:last-child {
+    & > button {
       padding: 12px 20px;
       font: var(--heading5);
     }
