--- a/src/pages/applying/ui/applying-sum/styles.module.scss
+++ b/src/pages/applying/ui/applying-sum/styles.module.scss
@@ -92,9 +92,7 @@
         font: var(--font-md);
         border-radius: 8px;
         background-color: var(--bg-white);
-        box-shadow: 0px 0px 4px 0px rgba(7, 12, 19, 0.2);
-        padding: 12px;
-        color: var(--text-black);
+        box-shadow: 0px 0px 4px 0px rgba(7, 12, 19, 0.2); padding: 12px; color: var(--text-black);
         left: -180px;
 
         @media only screen and (max-width: 768px) {
@@ -166,7 +164,7 @@
       padding: 0;
     }
 
-    & > a {
+    & > button {
       padding: 12px 20px;
       font: var(--heading5);
 
