show unregistered phone number

--- a/src/features/otp/ui/otp-form/styles.module.scss
+++ b/src/features/otp/ui/otp-form/styles.module.scss
@@ -21,7 +21,7 @@
     text-align: center;
     outline: none;
 
-    &.error {
+    &--wrong {
       border-bottom: 2px solid var(--special-red);
     }
   }
