--- a/src/features/otp/ui/styles.module.scss
+++ b/src/features/otp/ui/styles.module.scss
@@ -22,6 +22,12 @@
     }
   }
 
+  &_error {
+    color: var(--special-red);
+    margin-block-start: 10px;
+    text-align: center;
+  }
+
   &_inner {
     margin-bottom: 56px;
   }
