added the ability to upload to the service minio

--- a/src/pages/registration/ui/reg-form/styles.module.scss
+++ b/src/pages/registration/ui/reg-form/styles.module.scss
@@ -11,7 +11,7 @@
     }
   }
 
-  &-icon2 {
+  &-icon--profile {
     width: 48px;
     height: 48px;
     flex-shrink: 0;
@@ -23,7 +23,7 @@
     margin-bottom: 24px;
   }
 
-  &-icon {
+  &-icon--wallet {
     width: 48px;
     height: 48px;
     border-radius: 50%;
