add loading to the registation auto request

--- a/src/pages/applying/ui/applying-auto/styles.module.scss
+++ b/src/pages/applying/ui/applying-auto/styles.module.scss
@@ -1,4 +1,8 @@
 .bb__applying {
+  &-wrap {
+    height: 100%;
+    padding-bottom: 30px;
+  }
   &_wrapper {
     max-width: 616px;
     border-radius: 8px;
