#46 entering auto data manually

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -19,6 +19,7 @@
     /* BACKGROUND */
     --color-bg-gray: #e8e8e8;
     --color-bg-light-gray: #f4f4f4;
+    --color-bg-warn: #fff5e1;
 
     /* TEXT */
     --color-text-gray: #7d7d7d;
